manifest/kcp.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kcp
spec:
  ports:
    - protocol: TCP
      name: kcp
      port: 6443
      targetPort: 6443
    - protocol: TCP
      name: virtual-workspaces
      port: 6444
      targetPort: 6444
  selector:
    app: kcp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kcp
  labels:
    app: kcp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kcp
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kcp
    spec:
      containers:
      - name: kcp
        image: ghcr.io/kcp-dev/kcp:latest
        ports:
        - containerPort: 6443
        command:
        - /kcp
        args:
        - start
        - --etcd-servers=https://etcd:2379
        - --etcd-keyfile=/etc/etcd/tls/server/tls.key
        - --etcd-certfile=/etc/etcd/tls/server/tls.crt
        - --etcd-cafile=/etc/etcd/tls/server/ca.crt
        - --tls-private-key-file=/etc/kcp/tls/server/tls.key
        - --tls-cert-file=/etc/kcp/tls/server/tls.crt
        - --requestheader-client-ca-file=/etc/kcp/tls/requestheader-client/ca.crt
        - --requestheader-username-headers=X-Remote-User
        - --requestheader-group-headers=X-Remote-Group
        - --root-directory=/etc/kcp/config
        - --run-virtual-workspaces=false
        - --virtual-workspace-address=https://$(EXTERNAL_HOSTNAME)
        - --v=2
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: livez
            port: 6443
            scheme: HTTPS
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: readyz
            port: 6443
            scheme: HTTPS
        resources:
          limits:
            cpu: '2'
            memory: 2Gi
          requests:
            cpu: '1'
            memory: 1Gi
        volumeMounts:
        - name: etcd-certs
          mountPath: /etc/etcd/tls/server
        - name: kcp-certs
          mountPath: /etc/kcp/tls/server
        - name: kcp-requestheader-client-ca
          mountPath: /etc/kcp/tls/requestheader-client
        - name: kubeconfig
          mountPath: /etc/kcp/config
      - name: virtual-workspaces
        image: ghcr.io/kcp-dev/kcp:latest
        ports:
        - containerPort: 6444
        command:
        - sh
        - -c
        - >
          cat /etc/kcp/config/admin.kubeconfig | sed -e 's;://\([^/]*\);://localhost:6443;' > /etc/kcp/config/localhost.kubeconfig &&
          /virtual-workspaces
          workspaces
          --kubeconfig=/etc/kcp/config/localhost.kubeconfig
          --authentication-kubeconfig=/etc/kcp/config/localhost.kubeconfig
          --authentication-skip-lookup
          --tls-private-key-file=/etc/kcp/tls/server/tls.key
          --tls-cert-file=/etc/kcp/tls/server/tls.crt
          --requestheader-client-ca-file=/etc/kcp/tls/requestheader-client/ca.crt
          --requestheader-username-headers=X-Remote-User
          --requestheader-group-headers=X-Remote-Group
          --secure-port=6444
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: livez
            port: 6444
            scheme: HTTPS
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: readyz
            port: 6444
            scheme: HTTPS
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
        volumeMounts:
        - name: virtual-workspaces-certs
          mountPath: /etc/kcp/tls/server
        - name: kcp-requestheader-client-ca
          mountPath: /etc/kcp/tls/requestheader-client
        - name: kubeconfig
          mountPath: /etc/kcp/config
      volumes:
      - name: etcd-certs
        secret:
          secretName: etcd-cert
      - name: kcp-certs
        secret:
          secretName: kcp-cert
      - name: virtual-workspaces-certs
        secret:
          secretName: kcp-virtual-workspaces-cert
      - name: kcp-requestheader-client-ca
        secret:
          secretName: kcp-requestheader-client-ca
          items:
          - key: ca.crt
            path: ca.crt
      - name: kubeconfig
        persistentVolumeClaim:
          claimName: kcp
