manifest/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kcp
spec:
  # host: kcp
  path: /
  port:
    targetPort: 6443
  tls:
    destinationCACertificate: |
      -----BEGIN CERTIFICATE-----
      MIIC7zCCAdegAwIBAgIRAIQ1R3I763cBYGt1DxIaRhwwDQYJKoZIhvcNAQELBQAw
[...]
      XHIoBHyLnsOC/0YIZYM8O5yWSx5j/lvUhjxUkdxHGk0ghMQ=
      -----END CERTIFICATE-----
     #   $(oc get secret kcp-cert -o json | jq -r '.data["ca.crt"]' | base64 -d | sed -e "s/^/      /")
    termination: reencrypt
  to:
    kind: Service
    name: kcp
    weight: 100
  wildcardPolicy: None
